--- a/src/Arctic/UserBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/Arctic/UserBundle/Resources/translations/FOSUserBundle.en.yml
@@ -91,10 +91,12 @@ fos_user_group_form_name: "Group name:"
 
 fos_user_profile_form_user_username: "Username:"
 fos_user_profile_form_user_email: "Email:"
+fos_user_profile_form_user_name: "Name:"
 fos_user_profile_form_current: "Current Password:"
 
 fos_user_registration_form_username: "Username:"
 fos_user_registration_form_email: "Email:"
+fos_user_registration_form_name: "Name:"
 fos_user_registration_form_plainPassword_first: "Password:"
 fos_user_registration_form_plainPassword_second: "Verification:"
 
