--- a/src/Arctic/UserBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/Arctic/UserBundle/Resources/translations/FOSUserBundle.en.yml
@@ -94,15 +94,15 @@ fos_user_profile_form_user_email: "Email:"
 fos_user_profile_form_user_name: "Name:"
 fos_user_profile_form_current: "Current Password:"
 
-fos_user_registration_form_username: "Username:"
-fos_user_registration_form_email: "Email:"
-fos_user_registration_form_name: "Name:"
-fos_user_registration_form_plainPassword_first: "Password:"
-fos_user_registration_form_plainPassword_second: "Verification:"
+fos_user_registration_form_username: "Username"
+fos_user_registration_form_email: "Email"
+fos_user_registration_form_name: "Name"
+fos_user_registration_form_plainPassword_first: "Password"
+fos_user_registration_form_plainPassword_second: "Repeat password"
 
 fos_user_resetting_form_new_first: "New password:"
-fos_user_resetting_form_new_second: "Verification:"
+fos_user_resetting_form_new_second: "Repeat password:"
 
 fos_user_change_password_form_new_first: "New password:"
-fos_user_change_password_form_new_second: "Verification:"
+fos_user_change_password_form_new_second: "Repeat password:"
 fos_user_change_password_form_current: "Current password:"
