--- a/src/Arctic/UserBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/Arctic/UserBundle/Resources/translations/FOSUserBundle.en.yml
@@ -16,8 +16,8 @@ group:
 
 security:
     login:
-        username: "Username:"
-        password: "Password:"
+        username: "Username"
+        password: "Password"
         remember_me: Remember me
         submit: Login
 
@@ -86,23 +86,13 @@ layout:
     register: Register
     logged_in_as: Logged in as %username%
 
-# Form field labels
-fos_user_group_form_name: "Group name:"
-
-fos_user_profile_form_user_username: "Username:"
-fos_user_profile_form_user_email: "Email:"
-fos_user_profile_form_user_name: "Name:"
-fos_user_profile_form_current: "Current Password:"
-
-fos_user_registration_form_username: "Username"
-fos_user_registration_form_email: "Email"
-fos_user_registration_form_name: "Name"
-fos_user_registration_form_plainPassword_first: "Password"
-fos_user_registration_form_plainPassword_second: "Repeat password"
-
-fos_user_resetting_form_new_first: "New password:"
-fos_user_resetting_form_new_second: "Repeat password:"
-
-fos_user_change_password_form_new_first: "New password:"
-fos_user_change_password_form_new_second: "Repeat password:"
-fos_user_change_password_form_current: "Current password:"
+form:
+    name: "Name"
+    group_name: "Group name"
+    username: "Username"
+    email: "Email"
+    current_password: "Current Password"
+    password: "Password"
+    password_confirmation: "Repeat password"
+    new_password: "New password"
+    new_password_confirmation: "Repeat password"
